--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Lato', sans-serif;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-.home,
-.reports,
-.products {
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
+::-webkit-scrollbar-track {
+  /* -webkit-box-shadow: inset 0 0 6px rgba(27, 27, 27, 0.3); */
+  background: #7c7c7c;
+}
+
+::-webkit-scrollbar-thumb {
+background-color: rgb(255, 255, 255);
+outline: 1px solid rgb(3, 3, 3);
+border-radius: 5px;
 }
