--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,11 +4,12 @@
     /* width: 100%; */
     /* height: 50px; */
     padding: 50px;
-    background-color: rgb(3, 3, 3);
+    padding-bottom: 0px;
+    background-color: black;
     grid-template-columns: auto auto auto auto;
 }
 
-.title {
+.title1 {
     color: white;
     font-size: 14px;
     text-align: left;
@@ -25,6 +26,18 @@ a {
     margin-bottom: 20px;
 }
 
+
+.copyright {
+    color: white;
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    background-color: rgb(0, 0, 0);
+    /* width: 1vw; */
+    padding-left: 50px;
+    padding-bottom: 20px;
+}
 
 @media only screen and (max-width: 600px) {
     .footer {
